[package]
name = "discord-points"
version = "0.1.0"
authors = ["greg-el <gr3gl@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
serenity = "0.10"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
serde_json = "1.0.64"